Fixes unreadable font size

--- a/assets/styles/_style.scss
+++ b/assets/styles/_style.scss
@@ -8,6 +8,7 @@ body {
   background: black;
   color: white;
   font-family: 'Alegreya', serif;
+  font-size: 14pt;
 }
 
 h1,
